# nodepp-ungine

./: CMakeLists.txt  LICENSE  README.md  compile.sh
include/ungine/: animation.h  camera.h  collision.h  engine.h  global.h  image.h  import.h  input.h  kernel.h  light.h  lock.h  math.h  matrix.h  mesh.h  model.h  node.h  render.h  scene.h  shader.h  shape.h  sound.h  struct.h  texture.h  utils.h  vr.h  window.h
test/: CMakeLists.txt  _CMakeLists.txt  main.cpp  model.glb
test/assets/: astronaut.glb  skeld.glb
